# hale

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CHECKPOINT.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  README.md
crates/aperio-cli/: Cargo.toml  build.rs
crates/aperio-cli/src/: main.rs  pkg.rs
crates/aperio-cli/tests/: pkg_fetch.rs
crates/aperio-codegen/: Cargo.toml
crates/aperio-codegen/runtime/: lotus_arena.c  lotus_shm_ring.c  lotus_tls.c  lotus_treesitter.rs  stdlib.ap
crates/aperio-codegen/runtime/stdlib/: bytes_builder.ap  cli.ap  file.ap  http.ap  io_tcp.ap  json.ap  lang.ap  name.ap  process.ap  source.ap  tagged.ap  text.ap  ts.ap  yaml.ap
crates/aperio-codegen/src/: codegen.rs  lib.rs  mangle.rs
crates/aperio-codegen/tests/: array_repeat.rs  build_hello.rs  bus_adapter_inbound.rs  bus_array_payload.rs  bus_config.rs  bus_payload_arena_cap.rs  bus_publish_stack_alloca.rs  bus_subscriber.rs  bytes_builder.rs  bytes_builder_inplace.rs  bytes_builder_view.rs  bytes_construction.rs  bytes_view_stale.rs  bytes_view_type.rs  case_fold_and_nested_fstring.rs  closed_world_nested_struct.rs  cross_locus_from_method.rs  cross_locus_return_chain.rs  cross_seed_locus_arg.rs  decimal_alignment.rs  docs_server.rs  f22_capacity_dispatch.rs  f22_cell_field_io.rs  ffi_basic.rs  file_locus.rs  float_to_int_cast.rs  fn_ptr.rs  form_ring_buffer_codegen.rs  form_vec_codegen.rs  framework_elision.rs  fs.rs  fs_driver.c  generics.rs  hashmap.rs  hashmap_driver.c  http_hello.rs  http_request_headers.rs  http_response_headers.rs  http_server_bind_failure.rs  int_bitwise_ops.rs  (+71 more)
crates/aperio-codegen/tests/fixtures/examples/: README.md
crates/aperio-codegen/tests/fixtures/examples/01-locus-with-run/: main.ap
crates/aperio-codegen/tests/fixtures/examples/02-parent-child/: README.md
crates/aperio-codegen/tests/fixtures/examples/03-closure-test/: README.md
crates/aperio-codegen/tests/fixtures/examples/04-modes/: main.ap
crates/aperio-codegen/tests/fixtures/examples/05-bus/: README.md  deployment.yaml
crates/aperio-codegen/tests/fixtures/examples/06-mutable-counter/: README.md
crates/aperio-codegen/tests/fixtures/examples/07-control-flow/: README.md  main.ap
crates/aperio-codegen/tests/fixtures/examples/08-monotonic-sleep/: README.md  main.ap
crates/aperio-codegen/tests/fixtures/examples/09-functions/: main.ap
crates/aperio-codegen/tests/fixtures/examples/10-stateful-locus/: README.md  main.ap
crates/aperio-codegen/tests/fixtures/examples/11-drain-dissolve/: README.md  main.ap
crates/aperio-codegen/tests/fixtures/examples/12-user-types/: README.md  main.ap
crates/aperio-codegen/tests/fixtures/examples/15-match/: main.ap
crates/aperio-runtime/: Cargo.toml
crates/aperio-runtime/src/: builtins.rs  bus.rs  env.rs  eval.rs  lib.rs  value.rs
crates/aperio-runtime/tests/: examples.rs  f22_capacity_interpreter.rs  form_ring_buffer_interpreter.rs  form_vec_interpreter.rs  library_shape_interp_parity.rs  method_call_from_free_fn.rs  recognition_submodes_interpreter.rs  stdlib_interp_parity.rs
crates/hale-cli/: Cargo.toml  build.rs
crates/hale-cli/src/: lsp.rs  main.rs  mcp.rs
crates/hale-cli/tests/: bench.rs  bounded_annotation.rs  debug_info.rs  diamond_import.rs  doc.rs  fmt.rs  hale_test_runner.rs  lsp.rs  mcp.rs  qualified_type_forward_ref.rs  run_dir_resolves_imports.rs  test_ffi_pickup.rs  three_hop_import.rs  two_hop_qualified_literal.rs  unbounded_alloc_opt_in.rs  verify.rs
crates/hale-cli/tests/fixtures/bounded-annotation/: app.hl  plain.hl
crates/hale-cli/tests/fixtures/g34-app/: main.hl
crates/hale-cli/tests/fixtures/g34-lib-b/: wrap.hl
crates/hale-cli/tests/fixtures/g34-lib-c/: box.hl
crates/hale-cli/tests/fixtures/hale-test-mixed/: notes.hl  pass_test.hl
crates/hale-cli/tests/fixtures/hale-test-pass/: arith_test.hl  strings_test.hl
crates/hale-cli/tests/fixtures/qualified-type-fwd-app/: main.hl
crates/hale-cli/tests/fixtures/qualified-type-fwd-lib/: main.hl
crates/hale-cli/tests/fixtures/unbounded-alloc-opt-in/: app.hl
crates/hale-cli/tests/fixtures/ws33-lib-hb/: emitter.hl  topics.hl
crates/hale-cli/tests/fixtures/ws33-run-dir-app/: main.hl
crates/hale-lsp/: Cargo.toml
crates/hale-lsp/src/: lib.rs
crates/lotus-cli/: Cargo.toml
crates/lotus-cli/src/: main.rs
crates/lotus-codegen/: Cargo.toml
crates/lotus-codegen/runtime/: lotus_arena.c
crates/lotus-codegen/src/: codegen.rs  lib.rs
crates/lotus-codegen/tests/: build_hello.rs  generics.rs  serializer_shape.rs  transport.rs
crates/lotus-runtime/: Cargo.toml
crates/lotus-runtime/src/: builtins.rs  bus.rs  eval.rs  lib.rs  value.rs
crates/lotus-runtime/tests/: examples.rs
(+981 files in other folders)
