[workspace]
resolver = "2"
members = [
    "crates/aperio-syntax",
    "crates/aperio-types",
    "crates/aperio-runtime",
    "crates/aperio-codegen",
    "crates/aperio-cli",
    "crates/aperio-ts-shim",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["the Aperio authors"]
license = "Apache-2.0"
repository = "local"

[workspace.dependencies]
# All crates use only std for v0. Dependencies added as needed.
