[workspace]
resolver = "2"
members = [
    "crates/hale-syntax",
    "crates/hale-types",
    "crates/hale-codegen",
    "crates/hale-cli",
    "crates/hale-ts-shim",
]

[workspace.package]
version = "0.9.1"
edition = "2021"
authors = ["the Hale authors"]
license = "Apache-2.0"
repository = "local"

[workspace.dependencies]
# All crates use only std for v0. Dependencies added as needed.
