[workspace]
resolver = "2"
members = [
    "crates/hale-syntax",
    "crates/hale-types",
    "crates/hale-codegen",
    "crates/hale-cli",
    "crates/hale-ts-shim",
]

[workspace.package]
version = "0.11.9"
edition = "2021"
authors = ["the Hale authors"]
license = "Apache-2.0"
repository = "https://github.com/hale-lang/hale"

[workspace.dependencies]
# All crates use only std for v0. Dependencies added as needed.
