[package]
name = "lotus-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Lotus language CLI"

[[bin]]
name = "lotus"
path = "src/main.rs"

[dependencies]
lotus-syntax = { path = "../lotus-syntax" }
lotus-types = { path = "../lotus-types" }
lotus-runtime = { path = "../lotus-runtime" }
lotus-codegen = { path = "../lotus-codegen" }
