[package]
name = "lotus-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Lotus codegen targeting LLVM"

[dependencies]
lotus-syntax = { path = "../lotus-syntax" }
lotus-types = { path = "../lotus-types" }
inkwell = { version = "0.5", features = ["llvm18-0"] }
